# qzxing

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
examples/BarcodeEncoder/: BarcodeEncoder.pro  CMakeLists.txt  main.cpp  main.qml
examples/BarcodeEncoder/qml/BarcodeEncoder/: main.qml
src/: CMakeLists.txt  CameraImageWrapper.cpp  CameraImageWrapper.h  ImageHandler.cpp  ImageHandler.h  QZXing  QZXing-components.pri  QZXing.cpp  QZXing.h  QZXing.pc.in  QZXing.pri  QZXing.pro  QZXingFilter.cpp  QZXingFilter.cpp.Z11648  QZXingFilter.h  QZXingFilterVideoSink.cpp  QZXingFilterVideoSink.h  QZXingImageProvider.cpp  QZXingImageProvider.h  QZXingPlugin.cpp  QZXingPlugin.h  QZXing_vs2015.sln  QZXing_vs2015.vcxproj  imagehandler.cpp  imagehandler.h  qmldir  qzxing.cpp
src/zxing/: CMakeLists.txt
src/zxing/bigint/: CMakeLists.txt
src/zxing/win32/: CMakeLists.txt
src/zxing/win32/zxing/: CMakeLists.txt
src/zxing/zxing/: Binarizer.cpp  Binarizer.h  BinaryBitmap.cpp  BinaryBitmap.h  CMakeLists.txt  ChecksumException.cpp  ChecksumException.h  DecodeHints.cpp  DecodeHints.h  Exception.cpp  Exception.h  FormatException.cpp  FormatException.h  IllegalStateException.cpp  IllegalStateException.h  InvertedLuminanceSource.cpp  InvertedLuminanceSource.h  LuminanceSource.cpp  LuminanceSource.h  MultiFormatReader.cpp  MultiFormatReader.h  NotFoundException.cpp  NotFoundException.h  Reader.cpp  Reader.h  ReaderException.cpp  ReaderException.h  Result.cpp  Result.h  ResultMetadata.cpp  ResultPoint.cpp  ResultPoint.h  ResultPointCallback.h  UnsupportedEncodingException.cpp  UnsupportedEncodingException.h  WriterException.cpp  WriterException.h  ZXing.h
src/zxing/zxing/aztec/: AztecDetectorResult.cpp  AztecDetectorResult.h  AztecReader.cpp  AztecReader.h  CMakeLists.txt
src/zxing/zxing/aztec/decoder/: AztecDecoder.cpp  Decoder.h
src/zxing/zxing/aztec/detector/: AztecDetector.cpp  Detector.h
src/zxing/zxing/common/: Array.h  BitArray.cpp  BitArray.h  BitMatrix.cpp  BitMatrix.h  BitSource.cpp  BitSource.h  ByteArray.h  CMakeLists.txt  CharacterSetECI.cpp  CharacterSetECI.h  Counted.cpp  Counted.h  DecoderResult.cpp  DecoderResult.h  DetectorResult.cpp  DetectorResult.h  GlobalHistogramBinarizer.cpp  GlobalHistogramBinarizer.h  GreyscaleLuminanceSource.cpp  GreyscaleLuminanceSource.h  GreyscaleRotatedLuminanceSource.cpp  GreyscaleRotatedLuminanceSource.h  GridSampler.cpp  GridSampler.h  HybridBinarizer.cpp  HybridBinarizer.h  IllegalArgumentException.h  PerspectiveTransform.cpp  PerspectiveTransform.h  Str.cpp  Str.h  StringUtils.cpp  StringUtils.h  Types.h
src/zxing/zxing/common/detector/: MathUtils.h  MonochromeRectangleDetector.cpp  MonochromeRectangleDetector.h  WhiteRectangleDetector.cpp  WhiteRectangleDetector.h
src/zxing/zxing/common/reedsolomon/: GenericGF.cpp  GenericGF.h  GenericGFPoly.cpp  GenericGFPoly.h  ReedSolomonDecoder.cpp  ReedSolomonDecoder.h  ReedSolomonEncoder.cpp  ReedSolomonEncoder.h  ReedSolomonException.cpp  ReedSolomonException.h
src/zxing/zxing/datamatrix/: CMakeLists.txt  DataMatrixReader.cpp  DataMatrixReader.h  DataMatrixVersion.cpp  Version.h
src/zxing/zxing/datamatrix/decoder/: BitMatrixParser.h  DataBlock.h  DataMatrixBitMatrixParser.cpp  DataMatrixDataBlock.cpp  DataMatrixDecodedBitStreamParser.cpp  DataMatrixDecoder.cpp  DecodedBitStreamParser.h  Decoder.h
src/zxing/zxing/datamatrix/detector/: CornerPoint.h  DataMatrixCornerPoint.cpp  DataMatrixDetector.cpp  Detector.h  DetectorException.h
src/zxing/zxing/multi/: ByQuadrantReader.cpp  ByQuadrantReader.h  CMakeLists.txt  GenericMultipleBarcodeReader.cpp  GenericMultipleBarcodeReader.h  MultipleBarcodeReader.cpp  MultipleBarcodeReader.h
src/zxing/zxing/multi/qrcode/: QRCodeMultiReader.cpp  QRCodeMultiReader.h
src/zxing/zxing/oned/: CMakeLists.txt  CodaBarReader.cpp  CodaBarReader.h  Code128Reader.cpp  Code128Reader.h  Code39Reader.cpp  Code39Reader.h  Code93Reader.cpp  Code93Reader.h  EAN13Reader.cpp  EAN13Reader.h  EAN8Reader.cpp  EAN8Reader.h  EANManufacturerOrgSupport.cpp  EANManufacturerOrgSupport.h  ITFReader.cpp  ITFReader.h  MultiFormatOneDReader.cpp  MultiFormatOneDReader.h  MultiFormatUPCEANReader.cpp  MultiFormatUPCEANReader.h  OneDReader.cpp  OneDReader.h  UPCAReader.cpp  UPCAReader.h  UPCEANExtension2Support.cpp  UPCEANExtension2Support.h  UPCEANExtension5Support.cpp  UPCEANExtension5Support.h  UPCEANExtensionSupport.cpp  UPCEANExtensionSupport.h  UPCEANReader.cpp  UPCEANReader.h  UPCEReader.cpp  UPCEReader.h
src/zxing/zxing/oned/rss/: AbstractRSSReader.cpp  AbstractRSSReader.h  DataCharacter.cpp  DataCharacter.h  FinderPattern.cpp  FinderPattern.h  Pair.cpp  Pair.h  RSS14Reader.cpp  RSS14Reader.h  RSSUtils.h
src/zxing/zxing/pdf417/: CMakeLists.txt  PDF417Reader.cpp  PDF417Reader.h
src/zxing/zxing/pdf417/decoder/: BitMatrixParser.h  DecodedBitStreamParser.h  Decoder.h  PDF417BitMatrixParser.cpp  PDF417DecodedBitStreamParser.cpp  PDF417Decoder.cpp
src/zxing/zxing/pdf417/detector/: Detector.h  LinesSampler.cpp  LinesSampler.h  PDF417Detector.cpp
src/zxing/zxing/qrcode/: CMakeLists.txt  ErrorCorrectionLevel.h  FormatInformation.h  QRCodeReader.cpp  QRCodeReader.h  QRErrorCorrectionLevel.cpp  QRFormatInformation.cpp  QRVersion.cpp  Version.h
src/zxing/zxing/qrcode/decoder/: BitMatrixParser.h  DataBlock.h  DataMask.h  DecodedBitStreamParser.h  Decoder.h  Mode.h  QRBitMatrixParser.cpp  QRDataBlock.cpp  QRDataMask.cpp  QRDecodedBitStreamParser.cpp  QRDecoder.cpp  QRMode.cpp
src/zxing/zxing/qrcode/detector/: AlignmentPattern.h  AlignmentPatternFinder.h  Detector.h  FinderPattern.h  FinderPatternFinder.h  FinderPatternInfo.h  QRAlignmentPattern.cpp  QRAlignmentPatternFinder.cpp  QRDetector.cpp  QRFinderPattern.cpp  (+2 more)
tests/src/QZXingTests/: CMakeLists.txt  DecodeTestExecutor.cpp  DecodeTestExecutor.h  DecodeValidator.cpp  DecodeValidator.h  EncodeValidator.cpp  EncodeValidator.h  EncoderStressTest.cpp  EncoderStressTest.h  QZXingTests.pro  TestCase.cpp  TestCase.h  ValidationStats.cpp  ValidationStats.h  backward.hpp  main.cpp
(+290 files in other folders)
